tests/golden/type_errors/generic_constraint_callback.cd
fun numericPredicate<T: number>(value: T): bool {
  return true;
}

let texts: [string] = ["text"];
print filter(texts, numericPredicate);
