tests/golden/type_errors/generic_constraint_callback.err
Type error at 6:37: filter: type parameter T must satisfy number, got string
  print filter(texts, numericPredicate);
                                      ^
